add update handlers
